Fix h3, h4 font size on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,13 +171,13 @@ h2 {
 
 h3 {
     font-weight: 300;
+    font-size: 36px;
     margin-bottom: .9rem;
-    font-size: 2.1rem;
     line-height: 2.5rem;
 }
 
 h4 {
-    font-size: 1.6rem;
+    font-size: 32px;
     line-height: 2.2rem;
     margin-bottom: 1.1rem;
 }
